--- a/tubes_wad/public/css/style.css
+++ b/tubes_wad/public/css/style.css
@@ -13,31 +13,54 @@ header {
     background-size: cover;
 }
 
+
+
 .content {
-    width: 94%;
+    width: 75%;
     margin: 4em auto;
     font-size: 20px;
     line-height: 30px;
     text-align: justify;
+    height: auto;
 }
 
-.logo {
+.logo img {
     line-height: 60px;
     position: fixed;
     float: left;
-    margin: 5px 46px;
+    margin: 5px 0px 0px 0px;
     color: #fff;
     font-weight: bold;
     font-size: 40px;
     letter-spacing: 2px;
-    width: 100px;
-    height: 100px;
+    width: 180px;
+    height: 180px;
+}
+
+
+/* TEXT */
+strong{
+    color: rgb(36, 102, 99);
+}
+
+h2 {
+    color: rgb(36, 102, 99);
+}
+
+#h5text{
+    color: rgb(36, 102, 99);
+}
+
+.textregist
+{
+font-size: 14px;
 }
 
 nav {
     position: fixed;
     width: 100%;
     line-height: 60px;
+    z-index: 99;
 }
 
 nav ul {
@@ -122,7 +145,32 @@ section{
     padding-top: 10px;
 }
 
+/*Carousel*/
 
+.carousel-item {
+    height: 400px;
+    border-radius: 25px;
+  }
+
+.carousel-inner h5{
+    font-size: 40px;
+    color: rgb(41, 41, 41);
+    text-shadow: 1px 1px white;
+}
+
+.carousel-inner p{
+    color: black;
+    text-shadow: 1px 1px white;
+}
+
+  .item, .d-block{
+      position: absolute;
+      object-fit:cover;
+      height: 100% !important;
+      width:  100% !important;
+      border-radius: 25px;
+      /*min-height: 500px;*/
+  }
 
 
 @media(max-width: 786px) {
@@ -158,3 +206,98 @@ section{
     }
 }
 
+/*flip card */
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-card-front {
+    background-color: white;
+    color: black;
+  }
+  
+  .flip-card-back {
+    background-color: #65CFBB;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
+
+
+
+  
+/* FOOTER */
+.context-dark, .bg-gray-dark, .bg-primary {
+    color: rgba(255, 255, 255, 0.8);
+}
+
+.footer-classic a, .footer-classic a:focus, .footer-classic a:active {
+    color: #ffffff;
+}
+.nav-list li {
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.nav-list li a:hover:before {
+    margin-left: 0;
+    opacity: 1;
+    visibility: visible;
+}
+
+ul, ol {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.social-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 23px;
+    font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    text-transform: uppercase;
+    color: rgba(255, 255, 255, 0.5);
+}
+.social-container .col {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.nav-list li a:before {
+    content: "\f14f";
+    font: 400 21px/1 "Material Design Icons";
+    color: #4d6de6;
+    display: inline-block;
+    vertical-align: baseline;
+    margin-left: -28px;
+    margin-right: 7px;
+    opacity: 0;
+    visibility: hidden;
+    transition: .22s ease;
+}
